--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -79,3 +79,67 @@
 .profile__button-add:hover {
   opacity: 0.6;
 }
+
+@media screen and (max-width: 780px) {
+  .profile {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .profile__button-add {
+    max-width: 100px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .profile {
+    flex-direction: column;
+  }
+
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .profile__name {
+    align-items: center;
+    font-family: Inter, "Arial Narrow Bold", sans-serif;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 26.63px;
+    text-align: center;
+  }
+
+  .profile__button-edit {
+    max-width: 18px;
+    max-height: 18px;
+    min-width: 18px;
+    min-height: 18px;
+    margin-left: 10px;
+    margin-top: 30px;
+  }
+
+  .profile__description {
+    justify-content: center;
+    margin-bottom: 0;
+    font-family: Inter, "Arial Narrow Bold", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.94px;
+    text-align: center;
+  }
+
+  .profile__button-add {
+    margin-left: 0;
+    width: 282px;
+    margin-top: 36px;
+    max-width: 150px;
+  }
+
+  .profile__name-button {
+    display: flex;
+    flex-direction: row;
+  }
+}
