--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,18 +1,3 @@
-.cards {
-  text-align: left;
-  margin-top: 47.25px;
-}
-
-.card__list {
-  list-style: none;
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(auto-fit, 282px);
-  grid-gap: 20px 17px;
-  padding: 0;
-  margin-bottom: 0;
-}
-
 .card {
   display: flex;
   flex-direction: column;
@@ -29,7 +14,6 @@
 
 .card__description {
   color: black;
-  display: flex;
   background-color: #ffffff;
   padding-top: 25px;
   padding-bottom: 25px;
@@ -40,7 +24,6 @@
   justify-content: space-between;
   border-radius: 0 0 10px 10px;
   height: 29px;
-  max-width: 282px;
 }
 .card__title {
   font-family: Inter, "Arial Narrow Bold", sans-serif;
@@ -50,6 +33,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  margin: 0;
 }
 .card__button-like {
   background: transparent url(../images/like_button.svg) center no-repeat;
