--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -12,6 +12,8 @@
   font-weight: 400;
   line-height: 21.78px;
   text-align: left;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 780px) {
@@ -23,5 +25,13 @@
 @media screen and (max-width: 480px) {
   .footer {
     margin-left: 50px;
+  }
+
+  .footer__copyright {
+    font-family: Inter, "Arial Narrow Bold", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.94px;
+    text-align: left;
   }
 }
