--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -14,7 +14,7 @@
   grid-template-areas:
     "profile__name profile__button-edit"
     "profile__description profile__description";
-  grid-template-columns: minmax(auto, 375) auto;
+  grid-template-columns: minmax(auto, 282) auto;
   margin-left: 30px;
   align-items: center;
 }
@@ -34,10 +34,8 @@
 
 .profile__button-edit {
   background: transparent url(../images/edit_button.svg) center no-repeat;
-  max-width: 24px;
-  max-height: 24px;
-  min-width: 24px;
-  min-height: 24px;
+  width: 24px;
+  height: 24px;
   grid-area: profile__button-edit;
   margin-top: 37px;
   margin-left: 18px;
@@ -63,6 +61,7 @@
   font-size: 18px;
   line-height: 21.78px;
   margin-top: 16px;
+  margin-bottom: 0;
 }
 
 .profile__button-add {
@@ -72,8 +71,9 @@
   margin-left: auto;
   border-style: solid;
   border-color: #ffffff;
-  border-width: 1px;
+  border-width: 2px;
   min-width: 50px;
+  border-radius: 2px;
 }
 
 .profile__button-add:hover {
@@ -105,9 +105,7 @@
 
   .profile__name {
     align-items: center;
-    font-family: Inter, "Arial Narrow Bold", sans-serif;
     font-size: 22px;
-    font-weight: 500;
     line-height: 26.63px;
     text-align: center;
   }
@@ -123,10 +121,7 @@
 
   .profile__description {
     justify-content: center;
-    margin-bottom: 0;
-    font-family: Inter, "Arial Narrow Bold", sans-serif;
     font-size: 14px;
-    font-weight: 400;
     line-height: 16.94px;
     text-align: center;
   }
