--- a/blocks/card.css
+++ b/blocks/card.css
@@ -23,7 +23,7 @@
   align-items: center;
   justify-content: space-between;
   border-radius: 0 0 10px 10px;
-  height: 29px;
+  min-height: 29px;
 }
 .card__title {
   font-family: Inter, "Arial Narrow Bold", sans-serif;
