--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,7 +1,7 @@
 .profile {
-  padding-top: 40px;
   display: flex;
   align-items: center;
+  padding-top: 40px;
 }
 
 .profile__avatar {
@@ -17,6 +17,7 @@
   grid-template-columns: minmax(auto, 375px) auto;
   margin-left: 30px;
   align-items: center;
+  justify-content: center;
 }
 
 .profile__name {
@@ -25,11 +26,12 @@
   font-weight: 500;
   line-height: 48px;
   text-align: left;
-  margin-top: 25.75px;
-  margin-bottom: 0;
   grid-area: profile__name;
-  margin-right: 0;
-  margin-left: 0;
+  margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 320px;
 }
 
 .profile__button-edit {
@@ -37,7 +39,6 @@
   width: 24px;
   height: 24px;
   grid-area: profile__button-edit;
-  margin-top: 37px;
   margin-left: 18px;
   border-style: solid;
   border-color: #ffffff;
@@ -54,6 +55,8 @@
 .profile__name-button {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 .profile__description {
   grid-area: profile__description;
@@ -61,8 +64,8 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 21.78px;
-  margin-top: 16px;
   margin-bottom: 0;
+  margin-top: 16px;
 }
 
 .profile__button-add {
@@ -110,6 +113,8 @@
     font-size: 22px;
     line-height: 26.63px;
     text-align: center;
+    margin-top: 30px;
+    margin-bottom: 0px;
   }
 
   .profile__button-edit {
@@ -117,8 +122,9 @@
     max-height: 18px;
     min-width: 18px;
     min-height: 18px;
-    margin-left: 10px;
-    margin-top: 30px;
+    justify-content: center;
+    margin-top: auto;
+    margin-bottom: 5px;
   }
 
   .profile__description {
@@ -132,7 +138,7 @@
     margin-left: 0;
     width: 282px;
     margin-top: 36px;
-    max-width: 150px;
+    max-width: 282px;
   }
 
   .profile__name-button {
