--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,11 +1,11 @@
 .header {
-  min-height: 74px;
+  /* min-height: 74px; */
   border-style: solid;
   border-left: none;
   border-right: none;
   border-top: none;
   border-bottom-width: 1px;
-  border-color: rgba(84, 84, 84, 0.699);
+  border-color: rgba(84, 84, 84, 0.7);
   padding-top: 45px;
 }
 
@@ -22,7 +22,7 @@
 
 @media screen and (max-width: 780px) {
   .header__block {
-    margin-left: 20px;
+    margin-left: 27px;
     margin-right: 20px;
   }
 }
@@ -31,6 +31,14 @@
   .header__logo {
     width: 126px;
     height: 24px;
-    margin-left: 19px;
+    padding-bottom: 32px;
+  }
+  .header {
+    padding-top: 28px;
+  }
+
+  .header__block {
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
