--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,4 @@
 .header {
-  /* min-height: 74px; */
   border-style: solid;
   border-left: none;
   border-right: none;
@@ -7,9 +6,6 @@
   border-bottom-width: 1px;
   border-color: rgba(84, 84, 84, 0.7);
   padding-top: 45px;
-}
-
-.header__block {
   max-width: 880px;
   margin: auto;
 }
@@ -32,6 +28,7 @@
     width: 126px;
     height: 24px;
     padding-bottom: 32px;
+    margin-left: 30px;
   }
   .header {
     padding-top: 28px;
